--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "angularx-qrcode": "^16.0.2",
+    "date-fns": "^3.3.1",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
